kube-configuration/namespace-open5gs.yml
apiVersion: v1
kind: Namespace
metadata:
  name: open5gs
  labels:
    name: open5gs
